--- a/VodafoneWeb/packages.config
+++ b/VodafoneWeb/packages.config
@@ -25,6 +25,8 @@
   <package id="Microsoft.Owin.Security.Twitter" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Modernizr" version="2.8.3" targetFramework="net45" />
+  <package id="MySql.Data" version="6.9.7" targetFramework="net45" />
+  <package id="MySql.Data.Entity" version="6.9.7" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="Respond" version="1.4.2" targetFramework="net45" />
