--- a/VodafoneWeb/Web.config
+++ b/VodafoneWeb/Web.config
@@ -103,6 +103,7 @@
   </connectionStrings>-->
   <connectionStrings>
     <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />
+    <!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=aspmysql;Uid=root;Pwd=ronankeating;" />-->
   </connectionStrings>
   <appSettings>
     <add key="owin:AppStartup" value="VodafoneWeb.Startup,VodafoneWeb" />
