--- a/VodafoneWeb/Web.config
+++ b/VodafoneWeb/Web.config
@@ -102,8 +102,8 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AspNetIdentity2ExtendingUsersAndRoles-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>-->
   <connectionStrings>
-    <!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />-->
-    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=aspmysql;Uid=root;Pwd=ronankeating;" />
+    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />
+    <!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=aspmysql;Uid=root;Pwd=ronankeating;" />-->
   </connectionStrings>
   <appSettings>
     <add key="owin:AppStartup" value="VodafoneWeb.Startup,VodafoneWeb" />
