enable code first migration and now can deploy to azure cloud

--- a/VodafoneWeb/Web.config
+++ b/VodafoneWeb/Web.config
@@ -98,13 +98,15 @@
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
-  <!--<connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=AspNetIdentity2ExtendingUsersAndRoles-2-1-alpha1;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
-  </connectionStrings>-->
   <connectionStrings>
-    <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />
-    <!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=aspmysql;Uid=root;Pwd=ronankeating;" />-->
+    <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=vodafonewebdb;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
+  <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=vodafonewebdb2;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
+  <!--<connectionStrings>
+    --><!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />--><!--
+    --><!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=aspmysql;Uid=root;Pwd=ronankeating;" />--><!--
+  <add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafonewebdb;Uid=root;Pwd=ronankeating;" />
+  </connectionStrings>-->
   <appSettings>
     <add key="owin:AppStartup" value="VodafoneWeb.Startup,VodafoneWeb" />
     <add key="webpages:Version" value="3.0.0.0" />
@@ -121,10 +123,15 @@
   <!--
   </system.data>-->
   <entityFramework>
+    <!--<contexts>
+    <context type="VodafoneWeb.Models.ApplicationDbContext, VodafoneWeb">
+      <databaseInitializer type="VodafoneWeb.Models.ApplicationDbInitializer, VodafoneWeb" />
+    </context>
+  </contexts>-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
-      <!--<provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />-->
-      <provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />
+      <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
+      <!--<provider invariantName="MySql.Data.MySqlClient" type="MySql.Data.MySqlClient.MySqlProviderServices, MySql.Data.Entity.EF6" />-->
     </providers>
   </entityFramework>
   <system.data>
