--- a/VodafoneWeb/VodafoneWeb.csproj
+++ b/VodafoneWeb/VodafoneWeb.csproj
@@ -518,6 +518,7 @@
     <Content Include="Content\kendo\2015.2.624\fonts\DejaVu\DejaVuSerif.ttf" />
     <Content Include="Content\kendo\2015.2.624\images\kendoui.ttf" />
     <Content Include="Content\kendo\2015.2.624\images\kendoui.woff" />
+    <None Include="Properties\PublishProfiles\vodafoneweb.pubxml" />
     <None Include="Scripts\jquery-2.1.4.intellisense.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
@@ -832,7 +833,9 @@
     <Content Include="Scripts\respond.matchmedia.addListener.js" />
     <Content Include="Scripts\respond.matchmedia.addListener.min.js" />
     <Content Include="Scripts\respond.min.js" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="Views\Web.config" />
     <Content Include="Views\UsersAdmin\Index.cshtml" />
     <Content Include="Views\UsersAdmin\Edit.cshtml" />
@@ -893,6 +896,11 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="HelperMethods.cs" />
+    <Compile Include="Migrations\201508210157444_InitialCreate.cs" />
+    <Compile Include="Migrations\201508210157444_InitialCreate.Designer.cs">
+      <DependentUpon>201508210157444_InitialCreate.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\AdminViewModel.cs" />
     <Compile Include="Models\ApplicationDbContext.cs" />
@@ -922,6 +930,11 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\SalesService.cs" />
     <Compile Include="Startup.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201508210157444_InitialCreate.resx">
+      <DependentUpon>201508210157444_InitialCreate.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
