--- a/VodafoneWeb/Web.config
+++ b/VodafoneWeb/Web.config
@@ -24,7 +24,9 @@
   <pages>
     <namespaces>
       <add namespace="Kendo.Mvc.UI" /></namespaces></pages>
-    <customErrors mode="Off"/>
+    <customErrors mode="On" defaultRedirect="~/Error">
+      <error redirect="~/Error/NotFound" statusCode="404" />
+    </customErrors>
   </system.web>
   <!--<entityFramework>
     --><!--<defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
@@ -103,7 +105,7 @@
   </runtime>
   <connectionStrings>
     <!--<add name="DefaultConnection" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=vodafonewebdb;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>-->
-  <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=vodafonewebdb3;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
+  <add name="DefaultConnection" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=vodafonewebdb4;Integrated Security=SSPI" providerName="System.Data.SqlClient"/>
   </connectionStrings>
   <!--<connectionStrings>
     --><!--<add name="DefaultConnection" providerName="MySql.Data.MySqlClient" connectionString="Server=localhost;Database=vodafone_db;Uid=voda_admin;Pwd=password;" />--><!--
